# PHYS-3330

./: .gitignore  README.md  jlab-test.py  jlab.py
Labs/: Lab-3.ipynb  lab-1.ipynb
Prelabs/: Prelab-2.ipynb  Prelab-3.ipynb  prelab-4.ipynb
Prelabs/LTSpice Simulations/: PreLab 2 pt 1.asc  PreLab 2 pt 2.asc  PreLab 3.asc  PreLab 4.asc  PreLab1.asc
jlab/: pyproject.toml
jlab/src/jlab/: __init__.py  bode_plot.py  capacitors.py  filters_bandpass.py  filters_highpass.py  filters_lowpass.py  resistors.py  utils.py  voltage_dividers.py
jlab/src/jlab.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
