[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jlab"
version = "0.1.0"
description = "Electronics and filter calculation tools for J-Lab"
authors = [{ name = "sakkurax7" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy"]

[tool.setuptools]
package-dir = {"" = "src"}
